add a bit of style and spaces

--- a/src/components/fall-trends/collaborators/collaborators.styles.scss
+++ b/src/components/fall-trends/collaborators/collaborators.styles.scss
@@ -1,8 +1,5 @@
 .collab-container {
-    // display: flex;
-    // flex-flow: row wrap;
-    // flex-direction: row;
-    // justify-content: space-between;  
+    padding-top: 20px;
 
     span {
         border: white 1px solid;
