--- a/src/pages/fall-trends/fall.styles.scss
+++ b/src/pages/fall-trends/fall.styles.scss
@@ -12,5 +12,13 @@
         color: white;    
     }
 
+    button {
+        background-color: transparent;
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 12px;
+    }
+
     transition: all;
 }
